--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,6 +23,11 @@
     width: 70px;
 }
 
+.table.fixed {
+    width: 90%;
+    margin: auto;
+}
+
 body {
     font-family: sans-serif;
     margin: 20px;
